Convert to Kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -30,6 +34,10 @@ android {
     }
     dataBinding {
         enabled = true
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
@@ -71,4 +79,6 @@ dependencies {
 
     //CardView
     implementation 'com.google.android.material:material:1.2.0'
+
+    kapt "com.android.databinding:compiler:3.2.0-alpha10"
 }
