--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    testImplementation 'junit:junit:4.13'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -56,14 +56,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // Android Support Library
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.7.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
 
     // RxAndroid
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
@@ -75,7 +75,7 @@ dependencies {
 
     //Dagger
     implementation 'com.google.dagger:dagger:2.25.2'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.2'
+    kapt 'com.google.dagger:dagger-compiler:2.25.2'
 
     //CardView
     implementation 'com.google.android.material:material:1.2.0'
